# gx-tool-kami

./: .env  .gitignore  AGENTS.md  README.md  toolkami.rb
.cursor/: mcp.json
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json
clients/: .env  agent.py  dummy_client.py  gemini_client.py  openai_client.py
servers/: .env  __main__.py  app.py  pyproject.toml  sse_server.py
servers/modules/: __init__.py  browser.py  control.py  filesystem.py  terminal.py
servers/shttp_modules/: filesystem.py
